# RhythmicTapper

./: .gitignore  CMakeLists.txt  README.md
doc/: klassendiagram.graphml
game/: Level.cpp  Level.h  background.cpp  background.h  callibrationscene.cpp  callibrationscene.h  indicatorlight.cpp  indicatorlight.h  level1scene.cpp  level1scene.h  main.cpp  menuscene.cpp  menuscene.h  scenemanager.cpp  scenemanager.h  settings.h
game/framework/: button.cpp  button.h  core.cpp  core.h  drawsprite.cpp  drawsprite.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  sprite.cpp  sprite.h  textsprite.cpp  textsprite.h
